--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 h1 {
+    text-align: center ;
     color: red;
-    text-align: center;
-    text-shadow: 4px 4px 5px rgb(75, 16, 16);
+    text-shadow: 4px 4px 5px rgb(71,10,10);
 }
 
 .title {
-    color: orange;
+    color: rgb(36, 141, 45);
 }
 
-#italic {
-    color:rgb(177, 218, 112);
+.box {
+    display: inline-block;
+    height: 200px;
+    width: 200px;
+    margin: 10px;
+    background: blue;
+   
 }
 
 nav {
@@ -21,33 +26,37 @@ nav {
     background-color: blue;
 }
 
-a {
-    text-decoration: none;
-} 
-
 nav li {
     display: inline-block;
     padding: 30px;
+}
+
+a {
+    text-decoration-line: none;
 }
 
 nav ul {
     list-style: none;
 }
 
-.container {
-    border: 10px dashed rgb(18, 155, 87);
-    margin: 50px 5px;
-    padding: 30px;
-}
-.box {
-
-    height: 200px;
-    width: 200px;
-    background: blue;
-    margin: 10px;
+.circle-img {
+    border-radius: 50%;
 }
 
-@keyframes fadeMe{
+img {
+    box-shadow: 8px 8px 10px 8px rgb(154, 159, 160);
+}
+
+.flex {
+    margin: 30px;
+    border: 3px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: normal;
+}
+
+@keyframes fadeMe {
     0% {
         opacity: 1;
     }
@@ -58,25 +67,24 @@ nav ul {
 
 #box1 {
     animation-name: fadeMe;
-    animation-duration: 2s;
-    animation-iteration-count:infinite;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
 
 @keyframes rotation {
-    0%{transform: rotate(90deg);}
-    50%{transform: rotate(180deg);}
-    100%{transform: rotate(360deg);}
+    0% {transform: rotate(90deg);}
+    50% {transform: rotate(180deg);}
+    100% {transform: rotate(360deg);}
 }
 
 #box2 {
     animation-name: rotation;
     animation-duration: 5s;
-    animation-iteration-count: 4s;
+    animation-iteration-count: 4;
     animation-timing-function: ease-in-out;
     border-radius: 10%;
-    background-image: 
-    radial-gradient(circle, purple, orange, yellow, pink, purple);
+    background-image: radial-gradient(circle,purple,orange,yellow,pink,purple);
 }
 
 @keyframes getBigger {
@@ -86,29 +94,29 @@ nav ul {
 }
 
 #box3 {
-   animation: getBigger 6s 8s ease-in;
-   border-radius: 50%;
-   background: orange;
+    animation: getBigger infinite 8s linear;
+    border-radius: 50%;
+    background: orange;
 }
 
 @keyframes changeColors {
-    0% {background-color: grey;}
+    0% {background-color: gray;}
     25% {background-color: purple;}
     50% {background-color: yellow;}
     75% {background-color: pink;}
-    100% {background-color: grey;}
+    100% {background-color: gray;}
 }
 
 #box4 {
-   animation: changeColors 3s 2s forwards;
+    animation: changeColors 3s 2s forwards;
 }
 
 @keyframes moveBox {
-    0% {left:0px; top: 0px;} 
-    25% {left:100px; top: 0px;}
-    50% {left:100px; top: 200px;}
-    75% {left:0px; top: 200px;}
-    100% {left:0px; top: 0px;}
+    0% {left: 0px; top: 0px;}
+    25% {left: 100px; top: 0px;}
+    50% {left: 100px; top: 200px;}
+    75% {left: 0px; top: 200px;}
+    100% {left: 0px; top: 0px;}
 }
 
 #box5 {
@@ -118,29 +126,37 @@ nav ul {
 }
 
 #box6 {
-    top: 100px;
-    left: 200px;
-    position: fixed;
+    top: 10px;
+    left: 20px;
+    position: relative;
 }
 
-html {
-    background-image: linear-gradient(to left, blue, green, purple);
-}
 
-.circle-img {
-    border-radius: 50%;
-}
-
-.flex {
+form input {
+    display: block;
     margin: 30px;
-    border: 3px solid black;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
 }
+
+form textarea {
+    display: block;
+    margin:30px;
+}
+
+form button {
+    display: block;
+    margin: 30px 20px 30px 30px;
+}
+
+/*
+form imput, textarea, button {
+
+    display: block;
+    margin: 30px;
+}
+*/
 
 .contact-box {
-    display:flex;
+    display: flex;
     justify-content: center;
 }
 
@@ -148,34 +164,8 @@ html {
     margin: 30px;
 }
 
-.input-field{
+.input-field {
     margin: 20px;
-}
-
-
-
-
-/*
-form input {
-    dispaly:block;
-    margin:30px;
-}
-
-form textarea {
-    display: block;
-    margin: 30px;
-}
-
-form button {
-    display: block;
-    margin: 30%;
-}
-*/
-
-form input, textarea, button {
-
-    display:block;
-    margin:30px;
 }
 
 .wrapper {
@@ -198,34 +188,33 @@ form input, textarea, button {
   }
 
   .a {
-    grid-column: col 1 / span  1;
+    grid-column: col / span  2;
     grid-row: row ;
     display: flex;
     justify-content: center;
   }
   .b {
-    grid-column: col 2 / span  3 ;
+    grid-column: col 4 / span  2 ;
     grid-row: row ;
     display: flex;
     justify-content: center;
   }
   .c {
-    grid-column: col / span 5 ;
+    grid-column: col  / span 5 ;
     grid-row: row 2 ;
     display: flex;
     justify-content: center;
-    background-image: linear-gradient(pink, yellow, purple,orange
-    );
+    background-image: linear-gradient(pink,yellow,purple,orange);
   }
   .d {
-    grid-column: col  / span 3 ;
+    grid-column: col  / span  3;
     grid-row: row 3 ;
     display: flex;
     justify-content: center;
   }
 
   .e {
-    grid-column: col 3 / span 3;
+    grid-column: col 3 / span  3;
     grid-row: row 3;
     display: flex;
     justify-content: center;
